--- a/examenUf3/index.html
+++ b/examenUf3/index.html
@@ -7,8 +7,11 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
-    <h1 class="text-danger">Hola</h1>
+    <header></header>
+    <main>
+
+    </main>
+    <footer></footer>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
